--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,3 +1,15 @@
+.travis.yml
+travis/
+project.Rproj
 ^.*\.Rproj$
 ^\.Rproj\.user$
-Makefile
+deploy.sh
+make.sh
+cran-comments.md
+^.*\.Rcheck
+^Makefile$
+^Jenkinsfile$
+_pkgdown.yml
+^CRAN-SUBMISSION$
+data-raw/*
+license.md
