--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,4 +1,4 @@
-url: https://docs.sykdomspulsen.no/medicode/
+url: https://andreaczhang.github.io/medicode/
 
 template:
   bootstrap: 5
@@ -13,9 +13,6 @@ template:
 #   bg: "#393c61"
 
 authors:
-  Folkehelseinstituttet:
-    href: "https://www.fhi.no"
-    html: "<img src='man/figures/fhi.png' width=72>"
   footer:
     roles: [cre, aut]
     text: "Crafted by"
@@ -23,3 +20,5 @@ authors:
     roles: [aut, ctb, cph]
   before: "This package is proudly brought to you by:"
   after: "See the [changelog](news/index.html) for other contributors. :pray:"
+  Chi Zhang:
+    href: "https://andreaczhang.github.io"
