--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -9,10 +9,10 @@ cran-comments.md
 ^.*\.Rcheck
 ^Makefile$
 ^Jenkinsfile$
-_pkgdown.yml
 ^CRAN-SUBMISSION$
 data-raw/*
 license.md
 ^\.github$
 ^docs$
-pkgdown/*
+^_pkgdown\.yml$
+^pkgdown$
